--- a/.github/workflows/trialinit.yml
+++ b/.github/workflows/trialinit.yml
@@ -1,15 +1,8 @@
 name: Build A15 GS201 Kernel
 
 on:
-  push:
-    branches:
-      - main
-      - development
-  pull_request:
-    branches:
-      - main
-  schedule:
-    - cron: '0 0 * * *'
+  workflow_call: # This allows this workflow to be called from another workflow
+  workflow_dispatch: # Allows manual triggering of the workflow
 
 jobs:
   build-kernel-a15-gs201-kernelsu-susfs:
@@ -29,50 +22,133 @@ jobs:
 
       - name: Installing dependencies
         run: |
-          sudo apt install -y gcc-aarch64-linux-gnu abootimg mkbootimg
+          sudo apt install -y gcc-aarch64-linux-gnu
 
       - name: Set CONFIG Environment Variable
         run: |
           CONFIG="android_kernel_google_gs201"
           echo "CONFIG=$CONFIG" >> $GITHUB_ENV
+          echo "CONFIG set to: $CONFIG"
 
       - name: Clone AnyKernel3 and Other Dependencies
         run: |
-          git clone https://github.com/TheWildJames/AnyKernel3.git -b "15.0.0-sultan-gs201"
-          git clone https://gitlab.com/simonpunk/susfs4ksu.git -b "gki-android13-5.10"
+          echo "Cloning AnyKernel3 and other dependencies..."
+          ANYKERNEL_BRANCH="15.0.0-sultan-gs201"
+          SUSFS_BRANCH="gki-android13-5.10"
+          echo "Using branch for AnyKernel3: $ANYKERNEL_BRANCH"
+          echo "Using branch for SUSFS: $SUSFS_BRANCH"
+          git clone https://github.com/TheWildJames/AnyKernel3.git -b "$ANYKERNEL_BRANCH"
+          git clone https://gitlab.com/simonpunk/susfs4ksu.git -b "$SUSFS_BRANCH"
           git clone https://github.com/TheWildJames/kernel_patches.git
           git clone https://github.com/kerneltoast/android_kernel_google_gs201
 
-      # Add your patching steps here...
+      - name: Add KernelSU
+        run: |
+          echo "Changing to configuration directory: $CONFIG..."
+          cd "$CONFIG"
+          echo "Adding KernelSU..."
+          curl -LSs "https://raw.githubusercontent.com/rifsxd/KernelSU-Next/next/kernel/setup.sh" | bash -
+
+      - name: Apply SUSFS Patches
+        run: |
+          echo "Changing to configuration directory: $CONFIG..."
+          cd "$CONFIG"
+          echo "Applying SUSFS patches..."
+          cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./KernelSU-Next/
+          cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-android13-5.10.patch ./
+          cp ../susfs4ksu/kernel_patches/fs/* ./fs/
+          cp ../susfs4ksu/kernel_patches/include/linux/* ./include/linux/
+          cd ./KernelSU-Next
+          patch -p1 --forward < 10_enable_susfs_for_ksu.patch || true
+          cd ..
+          patch -p1 < 50_add_susfs_in_gki-android13-5.10.patch || true
+
+      - name: Apply Next-SUSFS Patches
+        run: |
+          echo "Changing to configuration directory: $CONFIG..."
+          cd "$CONFIG"
+          echo "Applying next SUSFS patches..."
+          cp ../kernel_patches/apk_sign.c_fix.patch ./
+          patch -p1 -F 3 < apk_sign.c_fix.patch || true # Added || true to prevent workflow failure
+          cp ../kernel_patches/core_hook.c_fix.patch ./
+          patch -p1 --fuzz=3 < core_hook.c_fix.patch || true # Added || true
+          cp ../kernel_patches/selinux.c_fix.patch ./
+          patch -p1 -F 3 < selinux.c_fix.patch || true # Added || true
+
+      - name: Apply KSU Hooks
+        run: |
+          echo "Changing to configuration directory: $CONFIG..."
+          cd "$CONFIG"
+          cp ../kernel_patches/ksu_hooks.patch ./
+          patch -p1 --fuzz=3 < ./ksu_hooks.patch || true # Added || true
+
+      - name: Apply Hide Stuff Patches
+        run: |
+          echo "Changing to configuration directory: $CONFIG..."
+          cd "$CONFIG"
+          cp ../kernel_patches/69_hide_stuff.patch ./
+          patch -p1 -F 3 < 69_hide_stuff.patch || true # Added || true
+
+      - name: Apply KernelSU & SUSFS SUltan Fixes
+        run: |
+          echo "Changing to configuration directory: $CONFIG..."
+          cd "$CONFIG"
+          cp ../kernel_patches/sys.c_fix.patch ./
+          patch -p1 --fuzz=3 < ./sys.c_fix.patch || true # Added || true
+          cp ../kernel_patches/mount.h_fix.patch ./
+          patch -p1 --fuzz=3 < ./mount.h_fix.patch || true # Added || true
+          cp ../kernel_patches/sched.h_fix.patch ./
+          patch -p1 --fuzz=3 < ./sched.h_fix.patch || true # Added || true
+          cp ../kernel_patches/user.h_fix.patch ./
+          patch -p1 --fuzz=3 < ./user.h_fix.patch || true # Added || true
+          sed -i "s/poofed_size: '%u'/poofed_size: '%llu'/g" ./fs/susfs.c
+          sed -i "s/length of string: %u/length of string: %lu/g" ./fs/susfs.c
+
+      - name: Add SUSFS Configuration Settings
+        run: |
+          echo "Changing to configuration directory: $CONFIG..."
+          cd "$CONFIG"
+          echo "Adding configuration settings to gs201_defconfig..."
+          echo "CONFIG_KSU=y" >> ./arch/arm64/configs/gs201_defconfig
+          echo "CONFIG_KSU_SUSFS=y" >> ./arch/arm64/configs/gs201_defconfig
+          # ... (rest of the config settings)
+          echo "CONFIG_TMPFS_XATTR=y" >> ./arch/arm64/configs/gs201_defconfig
+
+      - name: Run sed and perl Commands
+        run: |
+          echo "Changing to configuration directory: $CONFIG..."
+          cd "$CONFIG"
+          echo "Running sed commands..."
+          sed -i 's/CONFIG_LOCALVERSION="-Sultan"/CONFIG_LOCALVERSION="-Sultan-Wild+"/' ./arch/arm64/configs/gs201_defconfig
 
       - name: Build the Kernel
         run: |
+          echo "Changing to configuration directory: $CONFIG..."
           cd "$CONFIG"
+          echo "Building the kernel..."
           make gs201_defconfig -j$(nproc --all)
           make -j$(nproc --all)
 
       - name: Copy Images
         run: |
+          echo "Changing to configuration directory: $CONFIG..."
           cd "$CONFIG"
+          echo "Copying Image.lz4 and concatenating DTB files..."
           cp ./out/arch/arm64/boot/Image.lz4 ../AnyKernel3/Image.lz4
           cat ./out/arch/arm64/boot/dts/google/*.dtb > ../AnyKernel3/dtb
           cp ./out/arch/arm64/boot/dts/google/dtbo.img ../AnyKernel3/dtbo.img
 
-      - name: Create init_boot.img
+      - name: Create ZIP Files for Different Formats
         run: |
-          echo "Creating init_boot.img..."
-          mkbootimg --kernel ../AnyKernel3/Image.lz4 \
-                    --ramdisk ../AnyKernel3/dtbo.img \
-                    --dtb ../AnyKernel3/dtb \
-                    --cmdline "console=ttyS0,115200n8 earlyprintk" \
-                    --base 0x80000000 \
-                    --pagesize 4096 \
-                    --os_version 13.0.0 \
-                    --os_patch_level 2023-01-01 \
-                    --output ./init_boot.img
+          echo "Navigating to AnyKernel3 directory..."
+          cd ./AnyKernel3
+          ZIP_NAME="A15_Sultan_KernelSU_SUSFS_GS201.zip"
+          echo "Creating zip file $ZIP_NAME..."
+          zip -r "../$ZIP_NAME" ./*
 
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: init_boot.img
-          path: ./init_boot.img
+          name: kernel-gs201
+          path: |
+            *.zip
