--- a/.github/workflows/trialinit.yml
+++ b/.github/workflows/trialinit.yml
@@ -1,9 +1,8 @@
 name: Build A15 GS201 Kernel
 
 on:
-  workflow_call: # This allows this workflow to be called from another workflow
-  workflow_dispatch: # Allows manual triggering of the workflow
-
+  workflow_call:  # This allows this workflow to be called from another workflow
+  
 jobs:
   build-kernel-a15-gs201-kernelsu-susfs:
     runs-on: ubuntu-latest
@@ -27,128 +26,174 @@ jobs:
       - name: Set CONFIG Environment Variable
         run: |
           CONFIG="android_kernel_google_gs201"
+          
+          # Set CONFIG as an environment variable for future steps
           echo "CONFIG=$CONFIG" >> $GITHUB_ENV
+          
           echo "CONFIG set to: $CONFIG"
 
       - name: Clone AnyKernel3 and Other Dependencies
         run: |
           echo "Cloning AnyKernel3 and other dependencies..."
+    
+          # Define the branch names using the matrix values
           ANYKERNEL_BRANCH="15.0.0-sultan-gs201"
           SUSFS_BRANCH="gki-android13-5.10"
+
+          # Debug print the branches
           echo "Using branch for AnyKernel3: $ANYKERNEL_BRANCH"
           echo "Using branch for SUSFS: $SUSFS_BRANCH"
+
+          # Clone repositories using the branch names
           git clone https://github.com/TheWildJames/AnyKernel3.git -b "$ANYKERNEL_BRANCH"
           git clone https://gitlab.com/simonpunk/susfs4ksu.git -b "$SUSFS_BRANCH"
           git clone https://github.com/TheWildJames/kernel_patches.git
           git clone https://github.com/kerneltoast/android_kernel_google_gs201
-
+      
       - name: Add KernelSU
         run: |
           echo "Changing to configuration directory: $CONFIG..."
           cd "$CONFIG"
+          
           echo "Adding KernelSU..."
-          curl -LSs "https://raw.githubusercontent.com/rifsxd/KernelSU-Next/next/kernel/setup.sh" | bash -
+          curl -LSs "https://raw.githubusercontent.com/rifsxd/KernelSU-Next/next/kernel/setup.sh" | bash -s next
 
       - name: Apply SUSFS Patches
         run: |
           echo "Changing to configuration directory: $CONFIG..."
           cd "$CONFIG"
+          
           echo "Applying SUSFS patches..."
+          
+          # Copy SUSFS patches
           cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./KernelSU-Next/
           cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-android13-5.10.patch ./
           cp ../susfs4ksu/kernel_patches/fs/* ./fs/
           cp ../susfs4ksu/kernel_patches/include/linux/* ./include/linux/
+
           cd ./KernelSU-Next
+          
+          # Apply SUSFS patch for KernelSU
           patch -p1 --forward < 10_enable_susfs_for_ksu.patch || true
+          
+          # Change to common directory and apply SUSFS patch
           cd ..
           patch -p1 < 50_add_susfs_in_gki-android13-5.10.patch || true
-
+          
       - name: Apply Next-SUSFS Patches
         run: |
           echo "Changing to configuration directory: $CONFIG..."
           cd "$CONFIG"
+          
           echo "Applying next SUSFS patches..."
           cp ../kernel_patches/apk_sign.c_fix.patch ./
-          patch -p1 -F 3 < apk_sign.c_fix.patch || true # Added || true to prevent workflow failure
+          patch -p1 -F 3 < apk_sign.c_fix.patch
           cp ../kernel_patches/core_hook.c_fix.patch ./
-          patch -p1 --fuzz=3 < core_hook.c_fix.patch || true # Added || true
+          patch -p1 --fuzz=3 < core_hook.c_fix.patch
           cp ../kernel_patches/selinux.c_fix.patch ./
-          patch -p1 -F 3 < selinux.c_fix.patch || true # Added || true
+          patch -p1 -F 3 < selinux.c_fix.patch
 
       - name: Apply KSU Hooks
         run: |
           echo "Changing to configuration directory: $CONFIG..."
           cd "$CONFIG"
+          
+          # Apply additional patch for KSU hooks
           cp ../kernel_patches/ksu_hooks.patch ./
-          patch -p1 --fuzz=3 < ./ksu_hooks.patch || true # Added || true
+          patch -p1 --fuzz=3 < ./ksu_hooks.patch
 
       - name: Apply Hide Stuff Patches
         run: |
           echo "Changing to configuration directory: $CONFIG..."
           cd "$CONFIG"
+          
+          # Apply additional hide stuff patch
           cp ../kernel_patches/69_hide_stuff.patch ./
-          patch -p1 -F 3 < 69_hide_stuff.patch || true # Added || true
+          patch -p1 -F 3 < 69_hide_stuff.patch
 
       - name: Apply KernelSU & SUSFS SUltan Fixes
         run: |
           echo "Changing to configuration directory: $CONFIG..."
           cd "$CONFIG"
+          
+          # Apply various fixes related to KernelSU and SUSFS
           cp ../kernel_patches/sys.c_fix.patch ./
-          patch -p1 --fuzz=3 < ./sys.c_fix.patch || true # Added || true
+          patch -p1 --fuzz=3 < ./sys.c_fix.patch
+
           cp ../kernel_patches/mount.h_fix.patch ./
-          patch -p1 --fuzz=3 < ./mount.h_fix.patch || true # Added || true
-          cp ../kernel_patches/sched.h_fix.patch ./
-          patch -p1 --fuzz=3 < ./sched.h_fix.patch || true # Added || true
-          cp ../kernel_patches/user.h_fix.patch ./
-          patch -p1 --fuzz=3 < ./user.h_fix.patch || true # Added || true
-          sed -i "s/poofed_size: '%u'/poofed_size: '%llu'/g" ./fs/susfs.c
-          sed -i "s/length of string: %u/length of string: %lu/g" ./fs/susfs.c
+          patch -p1 --fuzz=3 < ./mount.h_fix.patch
 
       - name: Add SUSFS Configuration Settings
         run: |
           echo "Changing to configuration directory: $CONFIG..."
           cd "$CONFIG"
-          echo "Adding configuration settings to gs201_defconfig..."
-          echo "CONFIG_KSU=y" >> ./arch/arm64/configs/gs201_defconfig
-          echo "CONFIG_KSU_SUSFS=y" >> ./arch/arm64/configs/gs201_defconfig
-          # ... (rest of the config settings)
-          echo "CONFIG_TMPFS_XATTR=y" >> ./arch/arm64/configs/gs201_defconfig
+          
+           echo "Adding configuration settings to gs201_defconfig..."
+          
+           # Add SUSFS configuration settings in defconfig file 
+           {
+             echo "CONFIG_KSU=y"
+             echo "CONFIG_KSU_SUSFS=y"
+             echo "CONFIG_KSU_SUSFS_HAS_MAGIC_MOUNT=y"
+             echo "CONFIG_KSU_SUSFS_SUS_PATH=y"
+             echo "CONFIG_KSU_SUSFS_SUS_MOUNT=y"
+             echo "CONFIG_KSU_SUSFS_AUTO_ADD_SUS_KSU_DEFAULT_MOUNT=y"
+             echo "CONFIG_KSU_SUSFS_AUTO_ADD_SUS_BIND_MOUNT=y"
+             echo "CONFIG_KSU_SUSFS_SUS_KSTAT=y"
+             echo "CONFIG_KSU_SUSFS_SUS_OVERLAYFS=y"
+             echo "CONFIG_KSU_SUSFS_TRY_UMOUNT=y"
+             echo "CONFIG_KSU_SUSFS_AUTO_ADD_TRY_UMOUNT_FOR_BIND_MOUNT=y"
+             echo "CONFIG_KSU_SUSFS_SPOOF_UNAME=y"
+             echo "CONFIG_KSU_SUSFS_ENABLE_LOG=y"
+             echo "CONFIG_KSU_SUSFS_HIDE_KSU_SUSFS_SYMBOLS=y"
+             echo "CONFIG_KSU_SUSFS_SPOOF_CMDLINE_OR_BOOTCONFIG=y"
+             echo "CONFIG_KSU_SUSFS_OPEN_REDIRECT=y"
+             echo "CONFIG_KSU_SUSFS_SUS_SU=n" 
+           } >> ./arch/arm64/configs/gs201_defconfig
+
+           # Add additional tmpfs config setting 
+           echo "CONFIG_TMPFS_XATTR=y" >> ./arch/arm64/configs/gs201_defconfig
 
       - name: Run sed and perl Commands
         run: |
-          echo "Changing to configuration directory: $CONFIG..."
-          cd "$CONFIG"
-          echo "Running sed commands..."
-          sed -i 's/CONFIG_LOCALVERSION="-Sultan"/CONFIG_LOCALVERSION="-Sultan-Wild+"/' ./arch/arm64/configs/gs201_defconfig
+           echo "Changing to configuration directory: $CONFIG..."
+           cd "$CONFIG"
+
+           echo "Running sed commands..."
+           sed -i 's/CONFIG_LOCALVERSION="-Sultan"/CONFIG_LOCALVERSION="-Sultan-Wild+"/' ./arch/arm64/configs/gs201_defconfig
 
       - name: Build the Kernel
         run: |
-          echo "Changing to configuration directory: $CONFIG..."
-          cd "$CONFIG"
-          echo "Building the kernel..."
-          make gs201_defconfig -j$(nproc --all)
-          make -j$(nproc --all)
+           echo "Changing to configuration directory: $CONFIG..."
+           cd "$CONFIG"
+
+           echo "Building the kernel..."
+           make gs201_defconfig -j$(nproc --all)
+           make -j$(nproc --all)
 
       - name: Copy Images
         run: |
-          echo "Changing to configuration directory: $CONFIG..."
-          cd "$CONFIG"
-          echo "Copying Image.lz4 and concatenating DTB files..."
-          cp ./out/arch/arm64/boot/Image.lz4 ../AnyKernel3/Image.lz4
-          cat ./out/arch/arm64/boot/dts/google/*.dtb > ../AnyKernel3/dtb
-          cp ./out/arch/arm64/boot/dts/google/dtbo.img ../AnyKernel3/dtbo.img
+           echo "Changing to configuration directory: $CONFIG..."
+           cd "$CONFIG"
+
+           echo "Copying Image.lz4 and concatenating DTB files..."
+           cp ./out/arch/arm64/boot/Image.lz4 ../AnyKernel3/Image.lz4
+           cat ./out/arch/arm64/boot/dts/google/*.dtb > ../AnyKernel3/dtb 
+           cp ./out/arch/arm64/boot/dts/google/dtbo.img ../AnyKernel3/dtbo.img
 
       - name: Create ZIP Files for Different Formats
         run: |
-          echo "Navigating to AnyKernel3 directory..."
-          cd ./AnyKernel3
-          ZIP_NAME="A15_Sultan_KernelSU_SUSFS_GS201.zip"
-          echo "Creating zip file $ZIP_NAME..."
-          zip -r "../$ZIP_NAME" ./*
+           echo "Navigating to AnyKernel3 directory..."
+           cd ./AnyKernel3
 
-      - name: Upload Build Artifacts
-        uses: actions/upload-artifact@v4
+           # Zip the files in the AnyKernel3 directory with a new naming convention 
+           ZIP_NAME="A15_Sultan_KernelSU_SUSFS_GS201.zip" 
+           echo "Creating zip file $ZIP_NAME..." 
+           zip -r "../$ZIP_NAME" ./* 
+          
+      - name: Upload Build Artifacts 
+        uses: actions/upload-artifact@v4 
         with:
-          name: kernel-gs201
-          path: |
-            *.zip
+            name: kernel-gs201 
+            path: | 
+              *.zip 
