--- a/.github/workflows/trialinit.yml
+++ b/.github/workflows/trialinit.yml
@@ -1,7 +1,17 @@
 name: Build A15 GS201 Kernel
 
+name: Build A15 GS201 Kernel
+
 on:
-  workflow_call:  # This allows this workflow to be called from another workflow
+  push:
+    branches:
+      - main  # Replace with your target branch
+      - development  # Add additional branches as needed
+  pull_request:
+    branches:
+      - main
+  schedule:
+    - cron: '0 0 * * *'  # Runs daily at midnight UTC
   
 jobs:
   build-kernel-a15-gs201-kernelsu-susfs:
